[package]
name = "exprtk_sys"
version = "0.0.1"
authors = ["<markschl19@gmail.com>"]
description = "Low level rust bindings to the ExprTk C++ library (http://www.partow.net/programming/exprtk)"
build = "build.rs"
license = "MIT"
repository = "https://github.com/markschl/exprtk_rs/exprtk_sys"
documentation = "https://docs.rs/exprtk_sys"

include = [
  "src/*",
  "cpp/*",
  "Cargo.toml",
  "build.rs"
]

[features]
default = []
debug = []
comments = []
break_continue = []
sc_andor = []
return_statement = []
rtl_io_file = []
rtl_vecops = []
enhanced_features = []
#string_capabilities = []
superscalar_unroll = []
caseinsensitivity = []

[build-dependencies]
gcc = "0.3.54"

[dependencies]
libc = "0.2"
