
[package]
name = "exprtk_rs-fuzz"
version = "0.0.1"
authors = ["<markschl19@gmail.com>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
exprtk_rs = { path = ".." }
libfuzzer-sys = "0.3"
approx = "0.4.0"
arbitrary = { version = "0.4", features = ["derive"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "random_formula"
path = "fuzz_targets/random_formula.rs"
